add: Задачи лекции Вспомогательный класс Collections